--- a/login.html
+++ b/login.html
@@ -38,302 +38,55 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Über uns</a>
+              <a class="nav-link js-scroll-trigger" href="index.html">Über uns</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">IT-Service</a>
+              <a class="nav-link js-scroll-trigger" href="index.html">IT-Service</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">Web-Service</a>
+              <a class="nav-link js-scroll-trigger" href="index.html">Web-Service</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#team">Team</a>
+              <a class="nav-link js-scroll-trigger" href="index.html">Team</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Kontakt</a>
+              <a class="nav-link js-scroll-trigger" href="index.html">Kontakt</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <!-- Header -->
-    <header class="masthead">
-      <div class="container">
 
-        <div class="intro-text">
-          <div class="intro-lead-in">Ihr Berliner IT-Team!</div>
-          <div class="intro-heading text-uppercase">IT- & Web-Service</div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Mehr erfahren!</a>
 
-        </div>
-      </div>
-    </header>
-
-    <!-- Services -->
-    <section id="services">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Über uns</h2>
-            <h3 class="section-subheading text-muted">Lernen Sie unsere Mentalität kennen.</h3>
-          </div>
-        </div>
-        <div class="row text-center">
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">Individuelle Produkte</h4>
-            <p class="text-muted">Egal ob sie nur ein kleines Unternehmen mit Informationstechnik ausgestattet sehen wollen oder gleich eine ganze Firmenpräsenz her muss. Unsere individuellen Angebote passen wir jedem Wunsch und Zeitplan an.</p>
-          </div>
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">Web-Design</h4>
-            <p class="text-muted">Durch langjährige Erfahrung unserer Web-Experten garantieren wir bemerkenswerte Ergebnisse im Bereich Web-Development. Unsere Seiten sind an jedes Mobilgerät und jede Bildschirmauflösung angepasst.</p>
-          </div>
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">IT-Service</h4>
-            <p class="text-muted">Unser Informatikexperten bieten ein weites Spektrum an IT-Services an! Egal ob sie Ihr Unternehmen mit Informationstechnik vernetzt haben wollen oder eine spezielle Softwarelösung brauchen. Wir finden den besten Weg für Sie!</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Portfolio Grid -->
-    <section class="bg-light" id="portfolio">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Unser IT-Service</h2>
-            <h3 class="section-subheading text-muted">Unsere Angebote sind skalierbar. Wir passen uns Ihrer Firmengröße an.</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/01-thumbnail.png" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Analyse</h4>
-              <p class="text-muted">Systemanalysen & Sicherheitsreports</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Administration</h4>
-              <p class="text-muted">Planung, Einrichtung & Administration</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Entwicklung</h4>
-              <p class="text-muted">Apps, Datenbanken und Websiten</p>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section>
-
-    <!-- About -->
-    <section id="about">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Web-Service</h2>
-            <h3 class="section-subheading text-muted">Eine professionelle Seite muss kein Vermögen kosten.</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <ul class="timeline">
-              <li>
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>Paket 1:</h4>
-                    <h4 class="subheading">Lite</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Perfekt für Vereine, Hobbyisten oder Gemeinschaften. Wir programmieren ein vorher abgesprochenes Grundgerüst und sie liefern Texte und Bilder.</p>
-                  </div>
-                </div>
-              </li>
-              <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>Paket 2:</h4>
-                    <h4 class="subheading">Advanced</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Eine Internetpräsenz für Jeden der sein Unternehmen präsentieren möchte. In enger Zusammenarbeit arbeiten wir Ihre Vorstellungen aus und visualisieren diese Schritt für Schritt. Texte und Bilder werden von uns erstellt.</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>Paket 3:</h4>
-                    <h4 class="subheading">Universal</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">In diese Kategorie kennt unser Perfektionismus keine Grenzen. Ihre Internetpräsenz wird nicht nur als ein Symbol für den Erfolg Ihres Unternehmens dienen. Auch Wünsche wie Datenbanken, Login-Bereiche oder Foren finden hier Beachtung.</p>
-                  </div>
-                </div>
-              </li>
-              <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <h4>Überzeugen
-                    <br>sie sich
-                    <br>einfach selbst! </h4>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Team -->
-    <section class="bg-light" id="team">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Unsere Kunden</h2>
-            <h3 class="section-subheading text-muted">Gern können auch sie uns Ihre Meinung mitteilen.</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-              <h4>Klara Zanker</h4>
-              <p class="text-muted">"Die neue Seite ist der Hammer! Genau wie abgesprochen und pünktlich online. Es gibt nichts Negatives zu berichten."
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-              <h4>Stefan Grube</h4>
-              <p class="text-muted">"Mein Startup war innerhalb von 3 Tagen komplett vernetzt und ausgestattet. Bisher gab es keine Probleme."</p>
-
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-              <h4>Lisanne Heudo</h4>
-              <p class="text-muted">"Der Live-Support von IT-Hoess hat uns schon zwei mal den Arbeitstag gerettet. Glück gehabt!"</p>
-
-            </div>
-          </div>
-        </div>
-        <div class="row">
-
-        </div>
-      </div>
-    </section>
-
-    <!-- Clients -->
-    <section class="py-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3 col-sm-6">
-            <a href="#">
-              <img class="img-fluid d-block mx-auto" src="img/logos/envato.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <a href="#">
-              <img class="img-fluid d-block mx-auto" src="img/logos/designmodo.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <a href="#">
-              <img class="img-fluid d-block mx-auto" src="img/logos/themeforest.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <a href="#">
-              <img class="img-fluid d-block mx-auto" src="img/logos/creative-market.jpg" alt="">
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!-- Contact -->
     <section id="contact">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Kontakt</h2>
-            <h3 class="section-subheading text-muted">Bei Fragen, Problemen oder Wünschen stehen wir jederzeit zur Verfügung.</h3>
+          <div class="col-lg-4 text-center">
+            <h2 class="section-heading text-uppercase">User-Login</h2>
+          <br>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-12">
             <form id="contactForm" name="sentMessage" novalidate>
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4">
                   <div class="form-group">
-                    <input class="form-control" id="name" type="text" placeholder="Ihr Name *" required data-validation-required-message="Bitte Namen eingeben.">
+                    <input class="form-control" id="name" type="text" placeholder="Benutzername *" required data-validation-required-message="Bitte Namen eingeben.">
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
-                    <input class="form-control" id="email" type="email" placeholder="Ihre Email *" required data-validation-required-message="Bitte E-Mail Adresse eingeben.">
+                    <input class="form-control" id="email" type="email" placeholder="Kennwort *" required data-validation-required-message="Bitte Kennwort eingeben.">
                     <p class="help-block text-danger"></p>
                   </div>
-                  <div class="form-group">
-                    <input class="form-control" id="phone" type="tel" placeholder="Ihre Nummer *" required data-validation-required-message="Bitte Telefonnummer eingeben.">
-                    <p class="help-block text-danger"></p>
                   </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <textarea class="form-control" id="message" placeholder="Ihre Nachricht *" required data-validation-required-message="Bitte Nachricht eingeben."></textarea>
-                    <p class="help-block text-danger"></p>
-                  </div>
-                </div>
                 <div class="clearfix"></div>
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12">
+                  <br>
+
                   <div id="success"></div>
                   <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Senden</button>
                 </div>
