--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     </section>
 
     <!-- Clients -->
-    <section class="py-5">
+    <section class="py-5" id="clientimgs">
       <div class="container">
         <div class="row">
           <div class="col-md-3 col-sm-6">
